[package]
name = "shader-prepper"
description = "Shader include parser and crawler"
readme = "README.md"
version = "0.2.0"
authors = ["Tomasz Stachowiak"]
edition = "2018"
license = "MIT"
repository = "https://github.com/h3r2tic/shader-prepper"

[dependencies]
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
