[package]
name = "shader-prepper"
description = "Shader include parser and crawler"
readme = "README.md"
version = "0.3.0-pre.1"
authors = ["Tomasz Stachowiak"]
edition = "2018"
license = "MIT"
repository = "https://github.com/h3r2tic/shader-prepper"

[features]
gl_compiler = [ "regex", "lazy_static" ]

[dependencies]
thiserror = "1.0"
regex = { version = "1.5", optional = true }
lazy_static = { version = "1.4", optional = true }

[dev-dependencies]
anyhow = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
